--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <h1>LEGOmees</h1>
 <input type="button" value="Kustuta" onClick="kustuta()">
+<input type="button" value="LEGO" onClick="lego()">
 <br>
 <canvas id="tahvel" width="300" height="200" style="border: 2px solid red; background-color: powderblue;" ></canvas>
 <br>
@@ -18,6 +19,9 @@
 <input type="button" value="Keha" onClick="joonistaKeha()">
 <input type="button" value="Jalad" onClick="joonistaJalad()">
 <input type="button" value="Käed" onClick="joonistaKaed()">
+<input type="button" value="Mõõk" onClick="joonistaMook()">
+<input type="button" value="Tekst" onClick="joonistaTekst()">
+<input type="button" value="Tähed" onClick="joonistaTahed()">
 <br>
 
 </body>
